WIP - Memory leaks

--- a/packages/example-app-base/index.html
+++ b/packages/example-app-base/index.html
@@ -37,7 +37,7 @@
 
       const scripts = [];
 
-      if (isLocalHost) {
+      if (false) {
         scripts.push('./react.development.js');
         scripts.push('./react-dom.development.js');
       } else {
